# secry-rs

./: Cargo.toml  LICENSE  README.md
snap/: snapcraft.yaml
src/: crypto.rs  main.rs  main_sec.rs  telemetry.rs  ui.rs
src/cmd/: analysis.rs  enc.rs  mod.rs  seal.rs  tele.rs  telemetry.rs
