[package]
name        = "secry"
version     = "1.1.8"
edition     = "2021"
description = "AES-256-GCM / ChaCha20-Poly1305 / XChaCha20-Poly1305 token encryption CLI"
license     = "MIT"
homepage    = "https://github.com/rushpym-dotcom/secry-rs"
repository  = "https://github.com/rushpym-dotcom/secry-rs"
keywords    = ["encryption", "crypto", "aes", "chacha20", "cli"]
categories  = ["cryptography", "command-line-utilities"]
readme      = "README.md"

[[bin]]
name = "secry"
path = "src/main.rs"

[[bin]]
name = "sec"
path = "src/main_sec.rs"

[dependencies]
# crypto
aes-gcm          = "0.10"
chacha20poly1305 = "0.10"
scrypt           = "0.11"
rand             = "0.8"
base64           = "0.22"
hmac             = "0.12"
sha2             = "0.10"
zeroize          = "1.7"
ureq      = "2.9"
serde_json = "1.0"
blake3 = "1"

# cli
clap      = { version = "4.5", features = ["derive"] }
rpassword = "7.3"

# utils
hex = "0.4"
dirs-next = "2.0"
